<resources>
    <string name="app_name">Personas</string>
    <string name="str_nombre">Nombre</string>
    <string name="str_apellido">Apellido</string>
    <string name="str_registro">REGISTRO</string>
    <string name="str_Limpiar">Limpiar</string>
    <string name="str_Leer">Leer</string>
    <string name="str_Progra">Programar</string>
    <string name="str_natacion">Natación</string>
    <string name="str_Edad">Edad</string>
    <string name="str_Registrar">Registrar</string>
    <string name="str_No">No.</string>
    <string name="str_Pasatiempo">Pasatiempo</string>
    //
    <string name="str_listar">Listar</string>
    <string name="mensaje"> Persona registrada Exitosamente</string>

    <string-array name="str_Opciones">
        <item>@string/str_Registrar</item>
        <item>@string/str_listar</item>
    </string-array>

</resources>
